--- a/Foodie Thing/Storyboards/Settings.storyboard
+++ b/Foodie Thing/Storyboards/Settings.storyboard
@@ -21,11 +21,11 @@
                         <inset key="separatorInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
                         <color key="sectionIndexColor" systemColor="labelColor"/>
                         <view key="tableFooterView" contentMode="scaleToFill" id="yWH-0r-uhU">
-                            <rect key="frame" x="0.0" y="635.5" width="414" height="50"/>
+                            <rect key="frame" x="0.0" y="635.5" width="414" height="134"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="media" translatesAutoresizingMaskIntoConstraints="NO" id="8hk-jC-UjH">
-                                    <rect key="frame" x="162.5" y="16.5" width="89" height="17"/>
+                                    <rect key="frame" x="162.5" y="77" width="89" height="17"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="89" id="6Dd-5V-ZgO"/>
                                         <constraint firstAttribute="height" constant="17" id="U6K-QS-Bc1"/>
@@ -33,7 +33,7 @@
                                 </imageView>
                             </subviews>
                             <constraints>
-                                <constraint firstItem="8hk-jC-UjH" firstAttribute="centerY" secondItem="yWH-0r-uhU" secondAttribute="centerY" id="5Uf-5G-7sy"/>
+                                <constraint firstAttribute="bottom" secondItem="8hk-jC-UjH" secondAttribute="bottom" constant="40" id="Fv0-Jx-a5c"/>
                                 <constraint firstItem="8hk-jC-UjH" firstAttribute="centerX" secondItem="yWH-0r-uhU" secondAttribute="centerX" id="gxm-mQ-cNG"/>
                             </constraints>
                         </view>
@@ -236,7 +236,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="343" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Privacy Policy &amp; terms" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="G5L-9H-mKu">
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Privacy Policy &amp; Terms" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="G5L-9H-mKu">
                                                     <rect key="frame" x="59.5" y="0.0" width="275.5" height="44"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -263,8 +263,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="374" height="50"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign out" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="viM-aS-PMq">
-                                                    <rect key="frame" x="149" y="8" width="76" height="34"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign Out" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="viM-aS-PMq">
+                                                    <rect key="frame" x="147.5" y="8" width="79.5" height="34"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                                     <color key="textColor" name="FT Theme"/>
                                                     <nil key="highlightedColor"/>
@@ -298,7 +298,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZGH-4r-gze" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6694" y="1272"/>
+            <point key="canvasLocation" x="6692.753623188406" y="1270.9821428571429"/>
         </scene>
         <!--About-->
         <scene sceneID="tkN-az-xLO">
@@ -407,32 +407,6 @@
                                     <constraint firstAttribute="width" secondItem="XqE-aO-29t" secondAttribute="height" multiplier="3:1" id="g4v-Bk-k6M"/>
                                 </constraints>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="More apps by Foodie Thing Media" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8YZ-I3-4xm">
-                                <rect key="frame" x="16" y="666" width="382" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="je8-4b-zP7"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="bEW-fX-sBZ">
-                                <rect key="frame" x="20.5" y="706" width="373.5" height="100"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" tag="3" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gma" translatesAutoresizingMaskIntoConstraints="NO" id="VLJ-8K-qhn">
-                                        <rect key="frame" x="0.0" y="0.0" width="124.5" height="100"/>
-                                    </imageView>
-                                    <imageView clipsSubviews="YES" tag="4" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="minimalism" translatesAutoresizingMaskIntoConstraints="NO" id="hZz-R9-KYd">
-                                        <rect key="frame" x="124.5" y="0.0" width="124.5" height="100"/>
-                                    </imageView>
-                                    <imageView clipsSubviews="YES" tag="5" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mel" translatesAutoresizingMaskIntoConstraints="NO" id="GkF-VO-lJI">
-                                        <rect key="frame" x="249" y="0.0" width="124.5" height="100"/>
-                                    </imageView>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="3f6-IW-b1M"/>
-                                </constraints>
-                            </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Made with ❤️ in NJ" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wvg-s7-eiE">
                                 <rect key="frame" x="16" y="806" width="382" height="40"/>
                                 <constraints>
@@ -446,39 +420,26 @@
                         <viewLayoutGuide key="safeArea" id="PHq-SL-4Rx"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="8YZ-I3-4xm" firstAttribute="top" relation="greaterThanOrEqual" secondItem="XqE-aO-29t" secondAttribute="bottom" constant="50" id="1jK-sV-FW8"/>
-                            <constraint firstItem="XqE-aO-29t" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="bEW-fX-sBZ" secondAttribute="leading" id="2dP-8D-2pP"/>
-                            <constraint firstItem="bEW-fX-sBZ" firstAttribute="top" secondItem="8YZ-I3-4xm" secondAttribute="bottom" id="7jG-Rm-sPu"/>
-                            <constraint firstItem="PHq-SL-4Rx" firstAttribute="trailing" secondItem="8YZ-I3-4xm" secondAttribute="trailing" constant="16" id="Aut-wM-cCZ"/>
                             <constraint firstItem="PHq-SL-4Rx" firstAttribute="trailing" secondItem="Wvg-s7-eiE" secondAttribute="trailing" constant="16" id="FVa-Jm-KvJ"/>
-                            <constraint firstItem="bEW-fX-sBZ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="PHq-SL-4Rx" secondAttribute="leading" constant="20" id="FeT-VS-UDn"/>
                             <constraint firstItem="PHq-SL-4Rx" firstAttribute="bottom" secondItem="Wvg-s7-eiE" secondAttribute="bottom" constant="16" id="FnK-Ov-KR3"/>
                             <constraint firstItem="XqE-aO-29t" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="PHq-SL-4Rx" secondAttribute="leading" constant="20" id="FrS-S4-xVK"/>
                             <constraint firstItem="jYo-nD-5Bj" firstAttribute="top" secondItem="sJW-ya-aEq" secondAttribute="bottom" constant="40" id="Goe-gZ-6pE"/>
                             <constraint firstItem="sJW-ya-aEq" firstAttribute="top" secondItem="PHq-SL-4Rx" secondAttribute="top" constant="12" id="OfG-sI-loU"/>
                             <constraint firstItem="PHq-SL-4Rx" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="XqE-aO-29t" secondAttribute="trailing" constant="20" id="Uzs-E2-OrD"/>
-                            <constraint firstItem="PHq-SL-4Rx" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="bEW-fX-sBZ" secondAttribute="trailing" constant="20" id="b7b-I1-6VL"/>
-                            <constraint firstItem="8YZ-I3-4xm" firstAttribute="leading" secondItem="PHq-SL-4Rx" secondAttribute="leading" constant="16" id="c3r-ik-A3Z"/>
                             <constraint firstItem="jYo-nD-5Bj" firstAttribute="leading" secondItem="PHq-SL-4Rx" secondAttribute="leading" constant="16" id="ebF-Kc-6kd"/>
                             <constraint firstItem="sJW-ya-aEq" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="PHq-SL-4Rx" secondAttribute="leading" priority="750" constant="20" id="jn8-Lq-rok"/>
                             <constraint firstItem="sJW-ya-aEq" firstAttribute="centerX" secondItem="PHq-SL-4Rx" secondAttribute="centerX" id="jo0-iX-x6h"/>
-                            <constraint firstItem="XqE-aO-29t" firstAttribute="trailing" secondItem="bEW-fX-sBZ" secondAttribute="trailing" id="kEf-Kh-auV"/>
-                            <constraint firstItem="bEW-fX-sBZ" firstAttribute="centerX" secondItem="PHq-SL-4Rx" secondAttribute="centerX" id="kUU-YL-45H"/>
                             <constraint firstItem="PHq-SL-4Rx" firstAttribute="trailing" secondItem="jYo-nD-5Bj" secondAttribute="trailing" constant="16" id="lo6-gd-Uh2"/>
                             <constraint firstItem="XqE-aO-29t" firstAttribute="centerX" secondItem="PHq-SL-4Rx" secondAttribute="centerX" id="nKh-f6-W5k"/>
                             <constraint firstItem="Wvg-s7-eiE" firstAttribute="leading" secondItem="PHq-SL-4Rx" secondAttribute="leading" constant="16" id="o1c-BM-Ncr"/>
                             <constraint firstItem="XqE-aO-29t" firstAttribute="top" secondItem="jYo-nD-5Bj" secondAttribute="bottom" constant="60" id="peW-MN-oRZ"/>
                             <constraint firstItem="PHq-SL-4Rx" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="sJW-ya-aEq" secondAttribute="trailing" priority="750" constant="20" id="qYd-x5-CoT"/>
-                            <constraint firstItem="Wvg-s7-eiE" firstAttribute="top" secondItem="bEW-fX-sBZ" secondAttribute="bottom" id="wZH-kW-jTu"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="About" largeTitleDisplayMode="never" id="nq6-Qa-FR2"/>
                     <connections>
-                        <outlet property="gmaImage" destination="VLJ-8K-qhn" id="946-xC-oNv"/>
                         <outlet property="jonahInsta" destination="OaL-cY-aLI" id="6I9-8e-a3Z"/>
-                        <outlet property="melImage" destination="GkF-VO-lJI" id="kje-kG-NJs"/>
                         <outlet property="memojiStack" destination="XqE-aO-29t" id="Zlq-zH-qcV"/>
-                        <outlet property="minimalismImage" destination="hZz-R9-KYd" id="fKp-FU-geb"/>
                         <outlet property="versionLabel" destination="jYo-nD-5Bj" id="bdS-bf-PWK"/>
                     </connections>
                 </viewController>
@@ -595,15 +556,15 @@
                             </tableViewSection>
                             <tableViewSection headerTitle="Bio" footerTitle="Profile photo change will be available in a future update." id="Pmj-OP-W8Q">
                                 <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="DFi-jx-oy0">
-                                        <rect key="frame" x="20" y="262" width="374" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="140" id="DFi-jx-oy0">
+                                        <rect key="frame" x="20" y="262" width="374" height="140"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="DFi-jx-oy0" id="rgd-Nu-gjY">
-                                            <rect key="frame" x="0.0" y="0.0" width="374" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="140"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="BVm-WM-GgH">
-                                                    <rect key="frame" x="14" y="2" width="349" height="40"/>
+                                                    <rect key="frame" x="14" y="2" width="349" height="136"/>
                                                     <color key="backgroundColor" systemColor="secondarySystemGroupedBackgroundColor"/>
                                                     <color key="textColor" systemColor="labelColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -649,13 +610,10 @@
         <image name="Jonah.Memoji" width="480" height="480"/>
         <image name="Tadreik.Memoji" width="480" height="480"/>
         <image name="app.badge.fill" catalog="system" width="128" height="124"/>
-        <image name="gma" width="800" height="600"/>
         <image name="info.circle.fill" catalog="system" width="128" height="121"/>
         <image name="instagram" width="200" height="200"/>
         <image name="iphone.radiowaves.left.and.right" catalog="system" width="128" height="86"/>
         <image name="media" width="3719" height="896"/>
-        <image name="mel" width="800" height="600"/>
-        <image name="minimalism" width="800" height="600"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
         <image name="square.and.arrow.up.fill" catalog="system" width="115" height="128"/>
         <image name="xmark" catalog="system" width="128" height="113"/>
