--- a/Foodie Thing/Storyboards/Base.lproj/Main.storyboard
+++ b/Foodie Thing/Storyboards/Base.lproj/Main.storyboard
@@ -170,6 +170,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="tintColor" name="FT Theme"/>
                         <color key="selectedImageTintColor" name="FT Theme"/>
+                        <tabBarAppearance key="standardAppearance"/>
                     </tabBar>
                     <connections>
                         <segue destination="h1G-yk-fN8" kind="relationship" relationship="viewControllers" id="8ZY-Q3-Gea"/>
@@ -344,9 +345,9 @@
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hhO-Ad-9OO">
-                                            <rect key="frame" x="0.0" y="0.0" width="119" height="30.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="119" height="31"/>
                                             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="YjY-Ma-yzc">
-                                                <rect key="frame" x="0.0" y="0.0" width="119" height="30"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="119" height="31"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="750" verticalCompressionResistancePriority="250" text="Tracking status" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J3D-kq-UlA" userLabel="Messages label">
@@ -954,13 +955,13 @@
     </scenes>
     <designables>
         <designable name="AhP-x3-hec">
-            <size key="intrinsicContentSize" width="673.5" height="20.5"/>
+            <size key="intrinsicContentSize" width="674" height="21"/>
         </designable>
         <designable name="GQp-aB-tcH">
-            <size key="intrinsicContentSize" width="673.5" height="20.5"/>
+            <size key="intrinsicContentSize" width="674" height="21"/>
         </designable>
         <designable name="tS6-aH-LwQ">
-            <size key="intrinsicContentSize" width="20.5" height="17"/>
+            <size key="intrinsicContentSize" width="21" height="17"/>
         </designable>
         <designable name="vBP-X4-EOr">
             <size key="intrinsicContentSize" width="20" height="17"/>
