--- a/Foodie Thing/Storyboards/Login.storyboard
+++ b/Foodie Thing/Storyboards/Login.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bfN-wp-lJe">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bfN-wp-lJe">
     <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -50,13 +50,13 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="By signing up, you agree to our Privacy Policy." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZbQ-dH-SBY" customClass="ActiveLabel" customModule="Foodie_Thing" customModuleProvider="target">
-                                        <rect key="frame" x="40" y="829" width="348" height="41"/>
+                                        <rect key="frame" x="40" y="829.33333333333337" width="348" height="40.666666666666629"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" systemColor="lightTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a2N-na-Hez" customClass="ASAuthorizationAppleIDButton">
-                                        <rect key="frame" x="74" y="733" width="280" height="56"/>
+                                        <rect key="frame" x="74" y="733.33333333333337" width="280" height="56"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="56" id="enX-VM-xJm"/>
                                             <constraint firstAttribute="width" constant="280" id="usV-It-fjo"/>
@@ -231,7 +231,7 @@
     </scenes>
     <designables>
         <designable name="ZbQ-dH-SBY">
-            <size key="intrinsicContentSize" width="349" height="21"/>
+            <size key="intrinsicContentSize" width="348.33333333333331" height="20.333333333333332"/>
         </designable>
     </designables>
     <resources>
