--- a/Foodie Thing/Storyboards/Login.storyboard
+++ b/Foodie Thing/Storyboards/Login.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bfN-wp-lJe">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bfN-wp-lJe">
     <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -158,7 +158,6 @@
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" semanticContentAttribute="forceRightToLeft" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ebf-S2-0yS">
                                 <rect key="frame" x="268" y="462.66666666666669" width="140" height="42"/>
-                                <color key="backgroundColor" red="0.99915200469999998" green="0.84327673910000001" blue="0.83921283479999997" alpha="0.5" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="42" id="Ny7-Oo-hHR"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="140" id="S4c-lD-01y"/>
@@ -170,6 +169,11 @@
                                     <color key="titleColor" name="FT Theme"/>
                                     <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="21" weight="semibold"/>
                                 </state>
+                                <buttonConfiguration key="configuration" style="tinted" image="arrow.right" catalog="system" title="Let's go!">
+                                    <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="21" weight="semibold"/>
+                                    <fontDescription key="titleFontDescription" type="system" weight="semibold" pointSize="20"/>
+                                    <color key="baseForegroundColor" name="FT Theme"/>
+                                </buttonConfiguration>
                                 <connections>
                                     <action selector="createAccount:" destination="gwJ-3V-ztQ" eventType="touchUpInside" id="Vnj-Kr-jIl"/>
                                 </connections>
@@ -219,7 +223,7 @@
         <image name="ft-1" width="2089" height="406"/>
         <image name="gradient" width="3024" height="1964"/>
         <namedColor name="FT Theme">
-            <color red="0.99607843137254903" green="0.35686274509803922" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.46274509803921571" green="0.31764705882352939" blue="0.99607843137254903" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="lightTextColor">
             <color white="1" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
